# coding-agent

./: .gitignore  AGENTS.md  Makefile  README.md  roadmap.md  specification.md
implementation/: .example-config  .gitignore  Makefile  README.md  config.example.json  config.yaml  go.mod  hej.txt  main.go  main_test.go
requirements/: 001-go-runtime.md  002-tui-input-prompt.md  003-runtime-statistics.md  004-bash-tool.md  005-read-file-tool.md  006-write-file-tool.md  007-inference-backend.md  008-context-size.md  009-context-compression.md  010-streaming-inference.md  011-read-lines-tool.md  012-insert-lines-tool.md  013-replace-lines-tool.md  013-replace-text-tool.md  014-tool-calling-format.md  015-tool-prefix-prompt.md  016-tool-result-context.md  017-tui-tool-feedback.md  018-llm-error-feedback.md  019-tui-history-navigation.md  020-tui-ctrl-c-cancellation.md  020-tui-escape-cancellation.md  021-tui-context-size-display.md  022-no-user-input-echo.md  023-versioning.md  024-zero-external-dependencies.md  025-non-interactive-one-shot-mode.md  026-configurable-max-iterations.md  026-max-iterations.md  027-tui-reasoning-token-coloring.md  028-debug-flag.md  029-system-prompt-environment-info.md  030-patch-tool.md  031-github-copilot-backend.md  032-list-files-tool.md  032-replace-lines-tool.md  033-file-search-tool.md  033-read-only-mode.md  034-conversation-save-load.md  034-grep-tool.md  (+25 more)
rust/: Cargo.toml
rust/src/: agent.rs  colors.rs  config.rs  inference.rs  main.rs  tools.rs  tui.rs
specifications/: inference-api.md  mcp-server-integration.md
(+113 files in other folders)
