[package]
name = "coding-agent"
version = "0.1.0"
edition = "2021"
description = "Coding Agent Harness - Rust implementation"
authors = ["Agent"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
atty = "0.2"
dirs = "5"
futures = "0.3"
crossterm = "0.27"
